kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zero-trust
  labels:
    name: zero-trust
    environment: development
